Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-26403

Wrong text color in Mini target chooser popup

XMLWordPrintable

    • c099f622bb50b6b42ddca030ba4062dee7cf8752 (qt-creator/qt-creator/6.0)

      The fixing of an issue introduced by a fix can still introduce new issues.

      Like the fix for QTCREATORBUG-26370 introduced:

        For Gerrit Dashboard: QTCREATORBUG-26403
        # Subject Branch Project Status CR V

            portale Alessandro Portale
            portale Alessandro Portale
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes